# rust_os

./: README.md
blog_os/: Cargo.toml  x86_64-blog_os.json
blog_os/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
blog_os/tests/: basic_boot.rs  stack_overflow.rs
c_os/bios/: boot.asm  build  loader.asm
