[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"
authors = ["atluofu <mqa010225@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.11.4"
volatile = "0.5.1"
x86_64 = "0.14.2"
uart_16550 = "0.3.0"
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = [] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)